Fixed all elements to look good on mobile, minimize all text and fixed all boxes to fit mobile screen size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,6 +37,7 @@ main {
 	height: 100%;
 	width: 100%;
 	justify-content: center;
+	align-items: center;
 }
 
 .dashboard {
@@ -78,10 +79,10 @@ body .container .box h5 {
 	justify-content: center;
 }
 /* drinks container scroll bar  */
-#drinks .card-container {
+/* #drinks .card-container {
 	overflow-y: scroll;
 	max-height: 500px;
-}
+} */
 #drinks .card-container::-webkit-scrollbar {
 	width: 5px;
 }
@@ -102,7 +103,6 @@ body .container .box h5 {
 .card-container .card {
 	min-width: 280px;
 	max-width: 280px;
-	/* max-height: 300px; */
 	background-color: rgba(246, 247, 249, 0.943);
 	margin: 1rem;
 }
@@ -193,16 +193,16 @@ footer .container {
 
 .recipe-summary a {
 	cursor: default;
-	pointer-events: none;        
+	pointer-events: none;
 	text-decoration: none;
 	color: black;
 }
 
 .confirm-food {
 	margin: 10px;
-    width: 100%;
-    cursor: pointer;
-    margin-left: 0px;
+	width: 100%;
+	cursor: pointer;
+	margin-left: 0px;
 	font-size: 16px;
 }
 
@@ -235,6 +235,9 @@ footer .container {
 	max-width: 490px;
 	max-height: 310px;
 }
+.selected > p {
+	font-size: 1.5rem;
+}
 .sects {
 	display: flex;
 	flex-direction: column;
@@ -260,6 +263,7 @@ footer .container {
 
 /* Few media queries  */
 
+/* tablets  */
 @media screen and (max-width: 772px) {
 	h5 {
 		justify-content: center;
@@ -276,21 +280,113 @@ footer .container {
 		margin-bottom: 20px;
 	}
 }
+
+/* phones  */
 @media screen and (max-width: 500px) {
-	header {
-		padding: 1.5rem 1rem 0.2rem 1rem;
+	/* mobile navbar  */
+	#navbar {
+		align-items: center;
+		justify-content: space-evenly;
+		padding: 0 0.6rem;
+		gap: 1.3rem;
 	}
-	h1 {
+	.logo {
+		font-size: 1.2rem;
+	}
+	#date {
+		font-size: 1.2rem;
+		flex-wrap: wrap;
+		line-height: 5rem;
+	}
+	#sun {
+		padding: 0;
+		font-size: 1.2rem;
+	}
+
+	/* mobile title  */
+	header {
+		padding: 2rem 1rem 0.2rem 1rem;
+	}
+	header h1 {
 		font-size: 3rem;
 	}
+	#subTitle {
+		font-size: 1.3rem;
+	}
+	/* mobile main section  */
+	main {
+		width: 100vw;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.box {
+		max-width: 335px;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.dashboard .col {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
 	.card-container {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		padding: 0;
+	}
+
+	/* user selection box  */
+	#user-selected {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	#user-selected h5 {
+		font-size: 1.8rem;
+	}
+
+	#user-selected .box .row .selected h5 {
+		font-size: 1.5rem;
+	}
+
+	#user-selected span {
+		font-size: 1.3rem;
+	}
+
+	.selected > p {
+		font-size: 1rem;
+	}
+
+	.sects ul {
+		font-size: 1.3rem;
+	}
+
+	.sects ol {
+		font-size: 1.3rem;
+	}
+
+	/* favorite section  */
+	h2 {
+		font-size: 2.5rem;
+	}
+
+	.user-fav {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	/* increase footer text  */
+	footer a {
+		font-size: 1.2rem;
 	}
 }
-/* animations  */
 
+/* animations  */
 @keyframes title {
 	0% {
 		font-size: 90%;
